several improvements, articles listing page styled

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -19,6 +19,6 @@
     <%= f.text_area :description %>
   </p>
 
-  <a class="btn btn-alt"><%= f.submit %></a>
+  <a class="btn-mine btn-alt"><%= f.submit %></a>
 
 <% end %>
