--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -20,8 +20,8 @@
   </div>
 </section>
 
-<section class="row">
+<section class="row-mine">
   <div class="lead container">
-    <a class="btn btn-alt" href="/articles" >Cancel</a>
+    <a class="btn-mine btn-alt" href="/articles" >Cancel</a>
   </div>
 </section>
