--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -19,9 +19,9 @@
   </div>
 </section>
 
-<section class="row">
+<section class="row-mine">
   <div class="lead container">
-    <a class="btn btn-alt" href="/articles" >return</a>
+    <a class="btn-mine btn-alt" href="/articles" >return</a>
   </div>
 </section>
 
