--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,7 @@
 <!--Footer-->
 
-<footer class="primary-footer container group"> 
-      
-  <small>Copyright &copy; Filipe Zeferino</small>
-
-  <nav class="nav-footer">
-    <%= link_to "About", about_path %>
-  </nav>
-
+<footer id="sticky-footer" class="py-4 bg dark">
+  <div class="container text-center">
+    <small>&copy; <%= link_to "Filipe Zeferino", about_path, class: "text-white" %></small>
+  </div>
 </footer>
