--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,13 @@
 @import 'bootstrap/dist/css/bootstrap';
+/*
+  ========================================
+  General
+  ========================================
+*/
+
+.row {
+  background: #2c2b2b;
+}
 
 /*
   ========================================
@@ -6,25 +15,27 @@
   ========================================
 */
 
-.btn-outline-success {
-  border: 1px solid #ffffff;
-}
-.btn-outline-success:hover {
+.btn-mine-nav {
+  border-radius: 5px;
   color: #2c2b2b;
   background: #f3a007;
-  border: 1px solid #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 400;
+  letter-spacing: .5px;
+  margin: 0;
 }
 .navbar {
   background-color: #2c2b2b !important;
+}
+.navbar .dropdown-item {
+  color: #2c2b2b !important;
 }
 .nav-link {
   color: #ffffff !important;
 }
 .nav-link:hover {
   color: #f3a007 !important;
-}
-.navbar .dropdown-item {
-  color: #2c2b2b !important;
 }
 #logo {
   float: left;
@@ -36,4 +47,29 @@
 }
 #logo:hover {
   color: #f3a007 !important;
+}
+
+/*
+  ========================================
+  Back-end
+  ========================================
+*/
+
+.container {
+  width: 960px;
+}
+
+/*
+  ========================================
+  Articles - Index
+  ========================================
+*/
+
+.card-header {
+  color: #2c2b2b !important;
+  font-style: italic;
+}
+
+.card-text {
+  color: #2c2b2b !important;
 }
