--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,7 +12,7 @@
   </div>
 </section>
 
-<section class="row">
+<section class="row-mine">
   <div class="grid">
 
     <section class="about">
@@ -24,7 +24,7 @@
         <br><h6>Interested and fond of technology, I observe in the programming activity great affinity with my profile and personal skills.</h6>
         <br><h6>I'm eager to implement what I could learn so far on a professional environmet, I hope that through this website you can find some use for my skills :)</h6>
         
-        <br><h5>Carreer Goals</h5>
+        <br><br><h5>Carreer Goals</h5>
         <h6>I want to remain motivated, challenged and valued, facing a feasible and reliable professional road map.</h6>
 
       </div><!--
@@ -32,12 +32,12 @@
       --><aside class="col-1-3">
         <div class="about-info">
 
-          <img src="/images/about/perfil2.jpeg" alt="Filipe Zeferino">
+          <%= image_tag("about/perfil2.jpeg") %>
 
           <ul>
-            <li><a href="https://github.com/filipezef" target="_blank">Github</a></li>
-            <li><a href="https://www.hackerrank.com/filipezef" target="_blank">HackerRank</a></li>
-            <li><a href="https://www.linkedin.com/in/filipezef/" target="_blank">linkedin</a></li>
+            <li><%= link_to "Github", "https://github.com/filipezef", target: :_blank %></li>
+            <li><%= link_to "HackerRank", "https://www.hackerrank.com/filipezef", target: :_blank %></li>
+            <li><%= link_to "linkedin", "https://www.linkedin.com/in/filipezef", target: :_blank %></li>
           </ul>
         </div>
       </aside>
