--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to "About", about_path, class: "nav-link active", aria_current: "page" %>
+          <%= link_to "About", aboutme_path, class: "nav-link active", aria_current: "page" %>
         </li>
         <li class="nav-item">
           <%= link_to "Back-end", back_end_path, class: "nav-link active", aria_current: "page" %>
