--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,5 +3,6 @@
 <footer id="sticky-footer" class="py-4 bg dark">
   <div class="container text-center">
     <small>&copy; <%= link_to "Filipe Zeferino", about_path, class: "text-white" %></small>
+    <small>&copy; <%= link_to "Filipe Zeferino", new_path, class: "text-white" %></small>
   </div>
 </footer>
