--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -32,7 +32,9 @@
       --><aside class="col-1-3">
         <div class="about-info">
 
-          <%= image_tag("about/profile.jpeg") %>
+          <img src="profile.jpeg" alt="Filipe Zeferino">
+
+          <!--<%= image_tag("about/profile.jpeg") %>-->
 
           <ul>
             <li><%= link_to "Github", "https://github.com/filipezef", target: :_blank %></li>
