profile image resized and renamed

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -32,7 +32,7 @@
       --><aside class="col-1-3">
         <div class="about-info">
 
-          <img src="profile.jpeg" alt="Filipe Zeferino">
+          <img src="profile-new.jpg" alt="Filipe Zeferino">
 
           <!--<%= image_tag("about/profile.jpeg") %>-->
 
