class about-info removed from div element on about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -30,7 +30,7 @@
       </div><!--
 
       --><aside class="col-1-3">
-        <div class="about-info">
+        <div>
 
           <img src="profile-new.jpg" alt="Filipe Zeferino">
 
