--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -32,9 +32,7 @@
       --><aside class="col-1-3">
         <div>
 
-          <img src="profile-new.jpg" alt="Filipe Zeferino">
-
-          <!--<%= image_tag("about/profile.jpeg") %>-->
+          <%= image_tag("about/profile-new.jpeg") %>
 
           <ul>
             <li><%= link_to "Github", "https://github.com/filipezef", target: :_blank %></li>
