--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -32,7 +32,7 @@
       --><aside class="col-1-3">
         <div>
 
-          <%= image_tag("about/profile-new.jpeg") %>
+          <%= link_to image_tag("rails/ruby-on-rails-developer-udemy.PNG") + "Ruby on Rails Developer Course", "https://www.udemy.com/course/the-complete-ruby-on-rails-developer-course/", class: "teaser", title: "Currently on class 145 out of 446 (32% completed)", target: :_blank %>
 
           <ul>
             <li><%= link_to "Github", "https://github.com/filipezef", target: :_blank %></li>
