image working, trying to confirm if problem is with image file

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -32,7 +32,7 @@
       --><aside class="col-1-3">
         <div class="about-info">
 
-          <%= link_to image_tag("rails/ruby-on-rails-developer-udemy.PNG") + "Filipe Zeferino", "https://www.linkedin.com/in/filipezef", class: "teaser", title: "Currently on class 145 out of 446 (32% completed)", target: :_blank %>
+          <%= link_to image_tag("rails/ruby-on-rails-developer-udemy.PNG"), "https://www.linkedin.com/in/filipezef", title: "Filipe Zeferino", target: :_blank %>
 
           <ul>
             <li><%= link_to "Github", "https://github.com/filipezef", target: :_blank %></li>
