--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -32,7 +32,7 @@
       --><aside class="col-1-3">
         <div class="about-info">
 
-          <%= link_to image_tag("rails/ruby-on-rails-developer-udemy.PNG"), "https://www.linkedin.com/in/filipezef", title: "Filipe Zeferino", target: :_blank %>
+          <%= link_to image_tag("about/profile-new.jpg"), "https://www.linkedin.com/in/filipezef", title: "Filipe Zeferino", target: :_blank %>
 
           <ul>
             <li><%= link_to "Github", "https://github.com/filipezef", target: :_blank %></li>
