several improvement on styling

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,7 +17,7 @@
 
 .btn-mine-nav {
   border-radius: 5px;
-  color: #2c2b2b;
+  color: #ffffff;
   background: #f3a007;
   cursor: pointer;
   display: inline-block;
