--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -3,25 +3,13 @@
 </head>
 
 <section class="hero container">
-  <h2>Crate a new messsage</h2>
+  <h2>New Message</h2>
 </section>
 
-<section class="row-alt">
-  <div class="lead container">
-    <p>CRUD - Create</p>
-  </div>
-</section>
-
-<section class="row-new-article">
+<section class="row">
   <div class="grid">
 
     <%= render 'form' %>
 
-  </div>
-</section>
-
-<section class="row-mine">
-  <div class="lead container">
-    <a class="btn-mine btn-alt" href="/articles" >Cancel</a>
   </div>
 </section>
