--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,7 +20,7 @@
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Comming soon!" aria-label="Search">
-        <button class="btn-mine-nav btn-alt" type="submit" title="Search feature comming soon!" >Search</button>
+        <button class="btn-mine-nav btn-alt" type="submit" title="Search feature comming soon!" >SEARCH</button>
       </form>
     </div>
   </div>
