--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,14 +5,21 @@
 <section class="hero container">
   <br>
   <h2>Welcome!</h2>
-  <p>Check below what I could cover so far on coding</p>
-  <%= link_to "Back-end", back_end_path, class: "btn-mine btn-alt" %>
-  <%= link_to "Front-end", front_end_path, class: "btn-mine btn-alt" %>
+</section>
+
+<section>
+  <div class="lead container">
+    <p>Check below what I could cover so far on coding</p>
+    <%= link_to "Back-end", back_end_path, class: "btn btn-secondary" %>
+    <%= link_to "Front-end", front_end_path, class: "btn btn-secondary" %>
+  </div>
+  <br>
 </section>
 
 <section class="row-alt">
   <div class="lead container">
     <p>CRUD feature just launched!</p>
     <%= link_to "CRUD", articles_path, class: "btn-mine btn-alt" %>
+    <br><br>
   </div>
 </section>
