--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -68,7 +68,7 @@ body {
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .done {
-  color: #2fac10;
+  color: #1d8005;
 }
 
 /*
@@ -108,23 +108,6 @@ html {
 
 /*
   ========================================
-  Clearfix
-  ========================================
-*/
-.group:before, .group:after {
-  content: "";
-  display: table;
-}
-.group:after {
-  clear: both;
-}
-.group {
-  clear: both;
-  *zoom: 1;
-}
-
-/*
-  ========================================
   Rows
   ========================================
 */
@@ -141,10 +124,6 @@ html {
    background:    -moz-linear-gradient(to right, #2e2d35, #646964);
    background:         linear-gradient(to right, #2e2d35, #646964);
    padding: 44px 0 22px 0;
-}
-.row-new-article {
-  width: 500px;
-  margin: auto;
 }
 
 /*
@@ -252,12 +231,6 @@ a:hover {
 p a {
   border-bottom: 1px solid rgb(223, 226, 229);
 }
-.primary-header a, .primary-footer a {
-  color: #ffffff;
-}
-.primary-header a:hover, .primary-footer a:hover {
-  color: #f3a007;
-}
 
 /*
   ========================================
@@ -280,30 +253,6 @@ p a {
   margin: 66px 0 22px 0;
   text-align: right;
 }
-.primary-nav {
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: .5px;
-  text-transform: uppercase;
-  text-align: center;
-}
-
-/*
-  ========================================
-  Primary footer
-  ========================================
-*/
-
-.primary-footer {
-  color: #f3a007;
-  font-size: 14px;
-  padding-bottom: 44px;
-  padding-top: 44px;
-}
-.primary-footer small {
-  float: left;
-  font-weight: 400;
-}
 
 /*
   ========================================
@@ -311,7 +260,7 @@ p a {
   ========================================
 */
 
-/* header navigatino */
+/* header navigation */
 
 .nav {
   text-align: center;
@@ -325,18 +274,6 @@ p a {
   margin-right: 0;
 }
 
-/* footer navigatino */
-.nav-footer {
-  text-align: right;
-}
-.nav-footer li {
-  display: inline-block;
-  margin: 0 10px;
-  vertical-align: top;
-}
-.nav-footer li:last-child {
-  margin-right: 0;
-}
 
 /*
   ========================================
@@ -400,7 +337,6 @@ p a {
   font-size: 36px;
 }
 
-
 /*
   ========================================
   About
@@ -422,69 +358,4 @@ p a {
   height: 130px;
   margin: -66px 0 22px 0;
   vertical-align: top;
-}
-
-/*
-  ========================================
-  Articles
-  ========================================
-*/
-
-table {
-  margin-bottom: 44px;
-  width: 100%;
-}
-table:last-child {
-  margin-bottom: 0;
-}
-th, td {
-  padding-bottom: 22px;
-  vertical-align: top;
-}
-th {
-  padding-right: 45px;
-  text-align: center;
-  width: 20%;
-}
-td {
-  width: 40%;
-  color: #ffffff;
-  font-size: 16px;
-}
-thead {
-  line-height: 44px;
-}
-thead th {
-  color: #ffffff;
-  font-size: 24px;
-}
-tbody th {
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 400;
-  padding-top: 22px;
-  text-transform: uppercase;
-}
-tbody td {
-  border-top: 1px solid #dfe2e5;
-  padding-top: 21px;
-}
-tbody td:first-of-type {
-  padding-right: 15px;
-}
-tbody td:last-of-type {
-  padding-left: 15px;
-}
-tbody td:only-of-type {
-  padding-left: 0;
-  padding-right: 0;
-}
-table a {
-  color: #888;
-}
-table h4 {
-  margin-bottom: 0;
-}
-.schedule-offset {
-  color: #050505;
 }
