articles form layout updated

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -73,3 +73,13 @@
 .card-text {
   color: #2c2b2b !important;
 }
+
+/*
+  ========================================
+  Articles - Form
+  ========================================
+*/
+
+#form {
+  background-color: #6b6969 !important;
+}
