--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -8,24 +8,24 @@
     </ul>
   <% end %>
 
-  <div class="row justify-content-center">
-    <div class="col-10">
-      <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f| %>
-        <div class="form-group row">
+  <div class="row justify-content-center" >
+    <div class="col-10" >
+      <%= form_with(model: @article, class: "shadow p-3 mb-3 rounded", id: "form", local: true) do |f| %>
+        <div class="form-group row", id="form">
           <%= f.label :title, class: "col-2 col-form-label text-light" %>
-          <div class="col-10">
+          <div class="col-10", id="form" >
             <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Message's title" %>
           </div>
         </div>
-
-        <div class="form-group row">
+        <br>
+        <div class="form-group row", id="form">
           <%= f.label :description, class: "col-2 col-form-label text-light" %>
           <div class="col-10"> 
             <%= f.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Message's description" %>
           </div>
         </div>
-
-        <div class="form-group row justify-content-center">
+        <br>
+        <div class="form-group row justify-content-center", id="form">
           <%= f.submit class: "btn btn-outline-light btn-lg col-3" %>
         </div>
       <% end %>
@@ -35,6 +35,6 @@
 
 <section class="row-mine">
   <div class="lead container">
-    <%= link_to "cancel", articles_path, class: "btn btn-secondary" %>
+    <%= link_to "cancel", articles_path, class: "btn btn-warning" %>
   </div>
 </section>
