articles form style updated, show page style also updated

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -29,12 +29,13 @@
           <%= f.submit class: "btn btn-outline-light btn-lg col-3" %>
         </div>
       <% end %>
-    </div> 
+    </div>
   </div>
+  
 </div>
 
 <section class="row-mine">
   <div class="lead container">
-    <%= link_to "cancel", articles_path, class: "btn btn-warning" %>
+    <%= link_to "cancel", articles_path, class: "btn-mine btn-alt" %>
   </div>
 </section>
