--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -6,7 +6,7 @@
   <h2>Edit Message</h2>
 </section>
 
-<section class="row-mine">
+<section class="row">
   <div class="grid">
 
     <%= render 'form' %>
