--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -17,15 +17,20 @@
 
     <section class="about">
       <div class="col-2-3">
+        <div>
+          <h2>Filipe Zeferino</h2>
+          <h6>Electrical Engineer (UFSC/2010), currently coordinating the motor and electrical components subsystem at Nidec-GA/Embraco, Joinville. Extensive experience with project coordination related to product change.</h6>
+          <h6>Interested and fond of technology, I observe in the programming activity great affinity with my profile and personal skills.</h6>
+          <h6>I'm eager to implement what I could learn so far on a professional environmet, I hope that through this website you can find some use for my skills :)</h6>
+        </div>
 
-        <h2>Filipe Zeferino</h2>
+        <div>
+          <br><h5>Carreer Goals</h5>
+          <h6>I want to remain motivated, challenged and valued, facing a feasible and reliable professional road map.</h6>
+        </div>
         
-        <h6>Electrical Engineer (UFSC/2010), currently coordinating the motor and electrical components subsystem at Nidec-GA/Embraco, Joinville. Extensive experience with project coordination related to product change.</h6>
-        <br><h6>Interested and fond of technology, I observe in the programming activity great affinity with my profile and personal skills.</h6>
-        <br><h6>I'm eager to implement what I could learn so far on a professional environmet, I hope that through this website you can find some use for my skills :)</h6>
         
-        <br><br><h5>Carreer Goals</h5>
-        <h6>I want to remain motivated, challenged and valued, facing a feasible and reliable professional road map.</h6>
+        
 
       </div><!--
 
@@ -34,7 +39,7 @@
 
           <%= image_tag("about/profile-new.jpg") %>
 
-          <ul>
+          <ul class="about">
             <li><%= link_to "Github", "https://github.com/filipezef", target: :_blank %></li>
             <li><%= link_to "HackerRank", "https://www.hackerrank.com/filipezef", target: :_blank %></li>
             <li><%= link_to "linkedin", "https://www.linkedin.com/in/filipezef", target: :_blank %></li>
