--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,12 +8,11 @@
 </section>
 
 <section>
-  <div class="lead container">
+  <div class="lead container mb-3">
     <p>Check below what I could cover so far on coding</p>
     <%= link_to "Back-end", back_end_path, class: "btn btn-secondary" %>
     <%= link_to "Front-end", front_end_path, class: "btn btn-secondary" %>
   </div>
-  <br>
 </section>
 
 <section class="row-alt">
