--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -25,7 +25,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success" %></h5>
-                <p class="card-text"><%= truncate(article.description, length: 100) %></p>
+                <h4 class="card-text"><%= simple_format(truncate(article.description, length: 100)) %></h4>
                 <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
                 <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
                 <%= link_to "Delete", article_path(article.id), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
