--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,32 +3,28 @@
 </head>
 
 <section class="hero container">
-  <h2>View Message</h2>
+  <h2><%= @article.title %></h2>
 </section>
 
 <div class="container">
-  <div class="row justify-content-center" >
-    <div class="col-10" >
-      <%= form_with(model: @article, class: "shadow p-3 mb-3 rounded", id: "form", local: true) do |f| %>
-        <div class="form-group row", id="form">
-          <%= f.label :title, class: "col-2 col-form-label text-light" %>
-          <div class="col-10", id="form" >
-            <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Message's title" %>
-          </div>
+  <div class="row justify-content-md-center">
+    <div class="col-8 mt-4">
+      <div class="card text-center shadow mb-5 bg-white rounded">
+        <div class="card-header font-italic">
+          By Filipe Zeferino
         </div>
-        <br>
-        <div class="form-group row", id="form">
-          <%= f.label :description, class: "col-2 col-form-label text-light" %>
-          <div class="col-10"> 
-            <%= f.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Message's description" %>
-          </div>
+        <div class="card-body">
+          <div class="card-text-show"><%= simple_format(@article.description) %></div>
+          <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
+          <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
         </div>
-        <br>
-      <% end %>
-    </div> 
+        <div class="card-footer text-muted">
+          <small>Created <%= time_ago_in_words(@article.created_at) %> ago, edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-
 
 <section class="row-mine">
   <div class="lead container">
