--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,3 +1,8 @@
-<% flash.each do |name, msg| %>
-  <h2><strong><%= msg %></strong></h2>
-<% end %>
+<div class="container">
+  <% flash.each do |name, msg| %>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <%= msg %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  <% end %>
+</div>
