about page layout improved, flash message added when deleting article

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,16 +8,16 @@
 </section>
 
 <section>
-  <div class="lead container mb-3">
+  <div class="lead container mb-5">
     <p>Check below what I could cover so far on coding</p>
     <%= link_to "Back-end", back_end_path, class: "btn btn-secondary" %>
     <%= link_to "Front-end", front_end_path, class: "btn btn-secondary" %>
   </div>
 </section>
 
-<section class="row-alt">
+<section class="row-alt mb-5">
   <div class="lead container">
-    <p>CRUD feature just launched!</p>
+    <p>CRUD feature available!</p>
     <%= link_to "CRUD", articles_path, class: "btn-mine btn-alt" %>
     <br><br>
   </div>
