Add users create action

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -15,6 +15,12 @@
   </div>
 </section>
 
+<section>
+  <div class="lead container mb-5">
+    <%= link_to "Sign up!", signup_path, class: "btn btn-success btn-lg" %>
+  </div>
+</section>
+
 <section class="row-alt mb-5">
   <div class="lead container">
     <p>CRUD feature available!</p>
