--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,7 +8,7 @@
 
 <section class="row-alt">
   <div class="lead container">
-    <p>Be kind and leave a message for trial purposes.</p>
+    <p>Be kind and leave a message.</p>
     <a class="btn-mine btn-alt" href="/articles/new" >New Message</a>
   </div>
 </section>
