--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,6 +16,7 @@
 
         <div>
           <br><h5>Carreer Goals</h5>
+          <h6>To restart the carreer as Software Engineer and buid up the knowledge and experience that will allow me to reach the seniority on the field.</h6>
           <h6>I want to remain motivated, challenged and valued, facing a feasible and reliable professional road map.</h6>
         </div>
       </div><!--
@@ -25,7 +26,7 @@
 
           <%= image_tag("about/profile-new.jpg") %>
 
-          <ul class="about">
+          <ul>
             <li><%= link_to "Github", "https://github.com/filipezef", target: :_blank %></li>
             <li><%= link_to "HackerRank", "https://www.hackerrank.com/filipezef", target: :_blank %></li>
             <li><%= link_to "linkedin", "https://www.linkedin.com/in/filipezef", target: :_blank %></li>
