--- a/app/views/pages/back_end.html.erb
+++ b/app/views/pages/back_end.html.erb
@@ -135,7 +135,7 @@
 
       <section class="hero4 container">
         <h3><strong>Books (not started)</strong></h3>
-        <ul>
+        <ul class="about">
           <li>
           <%= link_to "Orientação a Objetos: Aprenda seus conceitos e suas aplicabilidades de forma efetiva", "https://www.amazon.com.br/Orienta%C3%A7%C3%A3o-Objetos-Aprenda-conceitos-aplicabilidades-ebook/dp/B01LXHG8HX/ref=sr_1_1?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2SMT1M8J5QZ1&dchild=1&keywords=orienta%C3%A7%C3%A3o+a+objetos&qid=1626298255&s=digital-text&sprefix=orienta%C3%A7%C3%A3o+a+o%2Cdigital-text%2C306&sr=1-1/", target: :_blank %>
           </li>
