--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,22 +9,16 @@
 
 <section>
   <div class="lead container mb-5">
-    <p>Check below what I could cover so far on coding</p>
-    <%= link_to "Back-end", back_end_path, class: "btn btn-secondary" %>
-    <%= link_to "Front-end", front_end_path, class: "btn btn-secondary" %>
-  </div>
-</section>
-
-<section>
-  <div class="lead container mb-5">
-    <%= link_to "Sign up!", signup_path, class: "btn btn-success btn-lg" %>
+    <p>Check below what I could learn so far on coding:</p>
+    <%= link_to "Back-end", back_end_path, class: "btn btn-secondary btn-lg" %>
+    <%= link_to "Front-end", front_end_path, class: "btn btn-secondary btn-lg" %>
   </div>
 </section>
 
 <section class="row-alt mb-5">
   <div class="lead container">
     <p>CRUD feature available!</p>
-    <%= link_to "CRUD", articles_path, class: "btn-mine btn-alt" %>
+    <%= link_to "Sign up!", signup_path, class: "btn btn-success btn-lg" %>
     <br><br>
   </div>
 </section>
