pagination added to articles and users views, layout improved for users view

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,6 +17,12 @@
         <li class="nav-item">
           <%= link_to "Front-end", front_end_path, class: "nav-link active", aria_current: "page" %>
         </li>
+        <li class="nav-item">
+          <%= link_to "Bloggers", users_path, class: "nav-link active", aria_current: "page" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Messages", articles_path, class: "nav-link active", aria_current: "page" %>
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Comming soon!" aria-label="Search">
