--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -37,6 +37,6 @@
 
 <section class="row-mine">
   <div class="lead container">
-    <%= link_to "cancel", root_path, class: "btn-mine btn-alt" %>
+    <%= link_to "cancel", users_path, class: "btn-mine btn-alt" %>
   </div>
 </section>
