--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -14,8 +14,8 @@
           <h6>I'm eager to implement what I could learn so far on a professional environmet, I hope that through this website you can find some use for my skills :)</h6>
         </div>
 
-        <div>
-          <br><h5>Carreer Goals</h5>
+        <div class="mt-5">
+          <h5>Carreer Goals</h5>
           <h6>To restart the carreer as Software Engineer and buid up the knowledge and experience that will allow me to reach the seniority on the field.</h6>
           <h6>I want to remain motivated, challenged and valued, facing a feasible and reliable professional road map.</h6>
         </div>
