--- a/app/views/pages/front_end.html.erb
+++ b/app/views/pages/front_end.html.erb
@@ -2,13 +2,9 @@
   <title>Front-end</title>
 </head>
 
-<section class="hero container">
-  <h2><strong>Front-end learning road map</strong></h2>
-</section>
-
 <!--CSS + HTML-->
 
-<section class="row-alt">
+<section class="row-alt mt-4">
   <div class="lead container">
     <h2>HTML &amp; CSS</h2>
     <p>(hover over the images to check the course status)</p>
