--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,37 +8,56 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to "About", about_path, class: "nav-link active", aria_current: "page" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Back-end", back_end_path, class: "nav-link active", aria_current: "page" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Front-end", front_end_path, class: "nav-link active", aria_current: "page" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Bloggers", users_path, class: "nav-link active", aria_current: "page" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Messages", articles_path, class: "nav-link active", aria_current: "page" %>
-        </li>
         
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            About
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><%= link_to "Learning back-end", back_end_path, class: "dropdown-item" %></li>
+            <li><%= link_to "Learning front-end", front_end_path, class: "dropdown-item" %></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><%= link_to "About Filipe", about_path, class: "dropdown-item" %></li>
+          </ul>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Messages
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <% if logged_in? %>
+              <li><%= link_to "New message", new_article_path, class: "dropdown-item" %></li>
+            <% end %>
+            <li><%= link_to "View messages", articles_path, class: "dropdown-item" %></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><%= link_to "TBD", root_path, class: "dropdown-item" %></li>
+          </ul>
+        </li>
+
         <% if logged_in? %>
-          <li class="nav-item">
-            <%= link_to current_user.username, user_path(current_user), class: "nav-link active", aria_current: "page" %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <%= current_user.username %>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><%= link_to "Edit Your Profile", edit_user_path(@user), class: "dropdown-item" %></li>
+            </ul>
           </li>
-          <li class="nav-item">
             <%= link_to "Logout", logout_path, class: "btn btn-danger", aria_current: "page", method: :delete %>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Log in", login_path, class: "btn btn-success me-3", aria_current: "page" %>
+            <%= link_to "Bloggers", users_path, class: "nav-link active", aria_current: "page" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Sign up", signup_path, class: "btn btn-success", aria_current: "page" %>
+            <%= link_to "Log in", login_path, class: "nav-link active", aria_current: "page" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign up", signup_path, class: "nav-link active", aria_current: "page" %>
           </li>
         <% end %>
+        
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Comming soon!" aria-label="Search">
