--- a/app/views/pages/back_end.html.erb
+++ b/app/views/pages/back_end.html.erb
@@ -2,13 +2,9 @@
   <title>Back-end</title>
 </head>
 
-<section class="hero container">
-  <h2><strong>Back-end learning road map</strong></h2>
-</section>
-
 <!--Ruby on Rails-->
 
-<section class="row-alt">
+<section class="row-alt mt-4">
   <div class="lead container">
     <h2>Ruby on Rails</h2>
     <p>(hover over the images to check the course status)</p>
