--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,9 +8,11 @@
 
 <%= gravatar_for  @user, size: 200 %>
 
-<div class="text-center mt-4 mb-4">
-  <%= link_to "Edit Your Profile", edit_user_path(@user), class: "btn btn-outline-info" %>
-</div>
+<% if logged_in? && @user == current_user %>
+  <div class="text-center mt-4 mb-4">
+    <%= link_to "Edit Your Profile", edit_user_path(@user), class: "btn btn-outline-info" %>
+  </div>
+<% end %>
 
 <div class="flickr_pagination">
   <%= will_paginate @articles, :container => false %>
